--- a/channel-setting.html
+++ b/channel-setting.html
@@ -108,7 +108,7 @@ Add your 9x9.tv creations and activity to your facebook timeline
 <div class="fminput clearfix">
 <label>Thumbnail</label>
 <div class="fmfield upload-img">
-<p class="img"><img id="thumbnail-imageUrl" src="images/thumbnail_box_ch.png" alt="" class="thumbnail" /><img src="images/loading.gif" alt="" class="loading" /></p>
+<p class="img"><img id="thumbnail-imageUrl" src="images/guide_ch_default.png" alt="" width="110" height="62" class="thumbnail" /><img src="images/loading.gif" alt="" class="loading" /></p>
 <p id="uploadThumbnail">Upload</p>
 <p class="notice img-upload">Better results with 720x480 or higher resolution image</p>
 <p class="notice upload-notice hide">Please upload jpeg, png, or gif files.</p>
