--- a/episode-list.html
+++ b/episode-list.html
@@ -223,8 +223,8 @@
 <div class="btns">
 <div class="btn-wrap enable">
 <ul>
-<li><a href="epcurate-curation.html?id=${id}" class="edit"><span></span>Edit</a></li>
-<li><a href="/api/episodes/${id}" rel="${id}" class="del"><span></span>Delete</a></li>
+<li><a href="epcurate-curation.html?id=${id}" class="edit"><span href="epcurate-curation.html?id=${id}"></span>Edit</a></li>
+<li><a href="/api/episodes/${id}" rel="${id}" class="del"><span rel="${id}"></span>Delete</a></li>
 </ul>
 </div>
 </div>
