update from DS (bug fix)
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@3997 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/channel-setting.html
+++ b/channel-setting.html
@@ -5,27 +5,27 @@
 <meta http-equiv="cache-control" content="no-cache" />
 <meta http-equiv="pragma" content="no-cache" />
 <meta http-equiv="expires" content="0" />
-<link rel="stylesheet" href="stylesheets/style.css" />
-<link rel="stylesheet" href="stylesheets/lightbox.css" />
-<link rel="stylesheet" href="stylesheets/channel.css" />
+<link rel="stylesheet" href="stylesheets/style.css?v=438" />
+<link rel="stylesheet" href="stylesheets/lightbox.css?v=438" />
+<link rel="stylesheet" href="stylesheets/channel.css?v=438" />
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.24/jquery-ui.min.js"></script>
-<script src="javascripts/nn-sdk.js"></script>
-<script src="javascripts/jquery.mousewheel.min.js"></script>
-<script src="javascripts/jquery.ellipsis.js"></script>
-<script src="javascripts/jquery.blockUI.js"></script>
-<script src="javascripts/jquery.toggleval.min.js"></script>
-<script src="javascripts/jquery.charcounter.min.js"></script>
-<script src="javascripts/jquery.tmpl.min.js"></script>
-<script src="javascripts/jquery.cookie.js"></script>
-<script src="javascripts/json2.js"></script>
-<script src="javascripts/purl.js"></script>
-<script src="javascripts/swfupload/swfupload.js"></script>
-<script src="javascripts/vertical.slider.js"></script>
-<script src="javascripts/config.js"></script>
-<script src="javascripts/basic.js"></script>
-<script src="javascripts/controller.js"></script>
-<script src="javascripts/channel.js"></script>
+<script src="javascripts/nn-sdk.js?v=438"></script>
+<script src="javascripts/jquery.mousewheel.min.js?v=438"></script>
+<script src="javascripts/jquery.ellipsis.js?v=438"></script>
+<script src="javascripts/jquery.blockUI.js?v=438"></script>
+<script src="javascripts/jquery.toggleval.min.js?v=438"></script>
+<script src="javascripts/jquery.charcounter.min.js?v=438"></script>
+<script src="javascripts/jquery.tmpl.min.js?v=438"></script>
+<script src="javascripts/jquery.cookie.js?v=438"></script>
+<script src="javascripts/json2.js?v=438"></script>
+<script src="javascripts/purl.js?v=438"></script>
+<script src="javascripts/swfupload/swfupload.js?v=438"></script>
+<script src="javascripts/vertical.slider.js?v=438"></script>
+<script src="javascripts/config.js?v=438"></script>
+<script src="javascripts/basic.js?v=438"></script>
+<script src="javascripts/controller.js?v=438"></script>
+<script src="javascripts/channel.js?v=438"></script>
 <title>9x9.tv - Channel settings</title>
 </head>
 <body>
