--- a/epcurate-curation.html
+++ b/epcurate-curation.html
@@ -5,32 +5,33 @@
 <meta http-equiv="cache-control" content="no-cache" />
 <meta http-equiv="pragma" content="no-cache" />
 <meta http-equiv="expires" content="0" />
-<link rel="stylesheet" href="stylesheets/style.css" />
-<link rel="stylesheet" href="stylesheets/lightbox.css" />
-<link rel="stylesheet" href="stylesheets/uniform.css" />
-<link rel="stylesheet" href="stylesheets/epcurate.css" />
-<link rel="stylesheet" href="stylesheets/ep-curation.css" />
+<link rel="stylesheet" href="stylesheets/style.css?v=438" />
+<link rel="stylesheet" href="stylesheets/lightbox.css?v=438" />
+<link rel="stylesheet" href="stylesheets/uniform.css?v=438" />
+<link rel="stylesheet" href="stylesheets/playback.css?v=438" />
+<link rel="stylesheet" href="stylesheets/epcurate.css?v=438" />
+<link rel="stylesheet" href="stylesheets/ep-curation.css?v=438" />
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.24/jquery-ui.min.js"></script>
-<script src="javascripts/nn-sdk.js"></script>
-<script src="javascripts/jquery.mousewheel.min.js"></script>
-<script src="javascripts/jquery.ellipsis.js"></script>
-<script src="javascripts/jquery.blockUI.js"></script>
-<script src="javascripts/jquery.toggleval.min.js"></script>
-<script src="javascripts/jquery.uniform.min.js"></script>
-<script src="javascripts/jquery.swfobject.min.js"></script>
-<script src="javascripts/jquery.titlecard.js"></script>
-<script src="javascripts/jquery.tmpl.min.js"></script>
-<script src="javascripts/jquery.cookie.js"></script>
-<script src="javascripts/jquery.countdown.min.js"></script>
-<script src="javascripts/json2.js"></script>
-<script src="javascripts/purl.js"></script>
-<script src="javascripts/swfupload/swfupload.js"></script>
-<script src="javascripts/horizontal-slider.js"></script>
-<script src="javascripts/config.js"></script>
-<script src="javascripts/basic.js"></script>
-<script src="javascripts/controller.js"></script>
-<script src="javascripts/curation.js"></script>
+<script src="javascripts/nn-sdk.js?v=438"></script>
+<script src="javascripts/jquery.mousewheel.min.js?v=438"></script>
+<script src="javascripts/jquery.ellipsis.js?v=438"></script>
+<script src="javascripts/jquery.blockUI.js?v=438"></script>
+<script src="javascripts/jquery.toggleval.min.js?v=438"></script>
+<script src="javascripts/jquery.uniform.min.js?v=438"></script>
+<script src="javascripts/jquery.swfobject.min.js?v=438"></script>
+<script src="javascripts/jquery.titlecard.js?v=438"></script>
+<script src="javascripts/jquery.tmpl.min.js?v=438"></script>
+<script src="javascripts/jquery.cookie.js?v=438"></script>
+<script src="javascripts/jquery.countdown.min.js?v=438"></script>
+<script src="javascripts/json2.js?v=438"></script>
+<script src="javascripts/purl.js?v=438"></script>
+<script src="javascripts/swfupload/swfupload.js?v=438"></script>
+<script src="javascripts/horizontal-slider.js?v=438"></script>
+<script src="javascripts/config.js?v=438"></script>
+<script src="javascripts/basic.js?v=438"></script>
+<script src="javascripts/controller.js?v=438"></script>
+<script src="javascripts/curation.js?v=438"></script>
 <title>9x9.tv - Episode Curation - Curation</title>
 </head>
 <body>
